Move auth icon into navbar buttons